favicon and load error handling

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Covid19</title>
+  <title>COVID-19 News and Stats</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/apple-touch-icon.png?alt=media">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/favicon-32x32.png?alt=media">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/favicon-16x16.png?alt=media">
+  <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/favicon.ico?alt=media">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
